Fix slow response when clicking on mobile

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ html {
 }
 
 body {
+  touch-action: manipulation;
   position: relative;
   font-family: "Fira Sans", sans-serif;
   background-color: var(--background-color);
